# krakenuniq-rs

./: .gitignore  Cargo.toml  krakenuniq-rs  profile.json
src/: classifications_stats.rs  classify_sequence.rs  db_counts.rs  fastq.rs  krakendb.rs  lib.rs  taxdb.rs  types.rs
src/classify/: classify_reads.rs  classify_sequence.rs  classify_stats.rs  mod.rs
